# TensorLBM

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  README.zh-CN.md  WATER_ENTRY_SLAMMING_SUMMARY.md  WAVE_BODY_VALIDATION_README.md  cylinder_cross_validation_matrix.json  dambreak_cross_validation_matrix.json  high_re_turbulence_results.json  install_deps.sh  pyproject.toml  sphere_cross_validation_matrix.json  suboff_grid_convergence_artifact.json  suboff_time_convergence_artifact.json
app/: README.md  start.sh
artifacts/: KBC_CD_ROOT_CAUSE_ANALYSIS.md  kbc_diagnostic_16cube_20steps.json
benchmarks/: bench_accuracy.py  bench_all_models.py  bench_bluff_body_matrix.py  bench_dam_break.py  bench_dam_break_3d.py  bench_dam_break_quant.py  bench_fs_2d.py  bench_marine.py  bench_mlups.py  bench_multiphase.py  bench_propeller.py
configs/: acoustic_sdaa_campaign_20260710T141500Z_gate.json
docs/: AMR_REGRESSION_REPORT.md  RANS_REGRESSION_EQUIVALENCE_REPORT.md  REGRESSION_REPORT.md  REGRESSION_REPORT_sliding_mesh.md  REGRESSION_REPORT_wall_multi_gpu.md  WAVE_BC_REGRESSION_REPORT.md  accuracy_recommendation_evidence_gate.md  advanced_collision_capability_matrix.md  ai_turbulence.md  boundary_capability_contract_r1.md  collision_matrix_cross_validation_r1.md  d3q19-d3q27-mrt-consistency-audit.md  d3q27_composition_evidence_r1.md  d3q27_full_composition_evidence_r1.md  development_workflow.md  free_surface_i_to_g_exact_float32_ledger_feasibility_r1.md  free_surface_i_to_g_strict_failure_policy_r1.md  free_surface_i_to_g_strict_failure_residual_audit_r1.md  free_surface_population_policy_evidence_r1.md  free_surface_population_transfer_plan_r1.md  free_surface_production_evidence_r1.md  free_surface_runtime_evidence_observer_r1.md  free_surface_transaction_contract_r1.md  observability.md  (+23 more)
(+777 files in other folders)
