[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tensorlbm"
dynamic = ["version"]
description = "PyTorch-based Lattice Boltzmann Method solvers and utilities."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "torch",
    "matplotlib",
    "einops",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "hypothesis",
    "tqdm",
    "h5py",
    "pyyaml",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "tensorlbm._version.__version__"}

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "SIM", "TCH", "ANN"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]
"app/tests/**" = ["ANN"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
